testing/tests/ui/block_in_filter_block.stderr
error: the previous template error derives from
  --> tests/ui/block_in_filter_block.rs:5:14
   |
5  |       source = r#"{% extends "html-base.html" %}
   |  ______________^
6  | |
7  | | {%- block body -%}
8  | |     <h1>Metadata</h1>
...  |
14 | | {%- endblock body %}
15 | | "#,
   | |__^
